--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1010,7 +1010,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .friendLink-item {
   background: #fff;
-  border-radius: 100%;
+  border-radius: 40px;
   padding: 48px 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
@@ -1066,7 +1066,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 .entertainment-item {
   background: #fff;
   border-radius: 40px;
-  padding: 48px 20px;
+  padding: 35px 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
   transition: all 0.3s ease-in-out 0s;
@@ -1553,7 +1553,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   width: 100%;
   height: auto;
   text-align: center;
-  display: flex;
+  /*display: flex;*/
   position: relative;
   padding: 30px;
 }
