--- a/src/main/resources/templates/friend_link.html
+++ b/src/main/resources/templates/friend_link.html
@@ -102,17 +102,17 @@
             <div class="col-md-6 col-lg-3 col-xs-12" th:each="item:${friendLink}">
                 <div class="friendLink-item wow fadeInDown animated" data-wow-delay="0.3s"
                      style="visibility: visible;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
-                    <div class="icon">
-                        <i class="icon-grid"></i>
-                    </div>
-                    <div class="friendLink-content">
-                        <h3>
-                            <p th:text="${item.friend_link_user}"></p>
-                        </h3>
-                        <a target="_blank" th:href="${item.friend_link_url}">
+                    <a target="_blank" th:href="${item.friend_link_url}">
+                        <div class="friendLink-pic" style="width: 80px;height: 80px;margin: auto;">
+                            <img th:src="${item.friend_link_user_head_image_url}" style="width: 100%;height: auto;border-radius: 80px;">
+                        </div>
+                        <div class="friendLink-content">
+                            <h3>
+                                <p th:text="${item.friend_link_user}" style="font-weight: bolder;color: #666;"></p>
+                            </h3>
                             <p th:text="${item.friend_link_url}"></p>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
