--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,10 +11,8 @@
     <link rel="stylesheet" th:href="@{/static/css/animate.css}">
     <link rel="stylesheet" th:href="@{/static/css/main.css}">
     <link rel="stylesheet" th:href="@{/static/css/responsive.css}">
-
 </head>
 <body>
-
 <!-- 头部开始 -->
 <header id="header-wrap">
     <!-- 导航栏开始 -->
@@ -57,7 +55,6 @@
                 </ul>
             </div>
         </div>
-
         <!-- 手机导航栏开始 -->
         <ul class="onepage-nev mobile-menu">
             <li>
@@ -85,7 +82,6 @@
     </nav>
     <div id="hero-area" class="hero-area-bg">
         <div class="overlay">
-
         </div>
         <div class="container">
             <div class="row">
@@ -149,10 +145,8 @@
         </div>
     </div>
     <!-- 主页壁纸结束 -->
-
 </header>
 <!-- 头部结束 -->
-
 <!-- 关于开始 -->
 <section id="about" class="section-padding">
     <div class="container">
@@ -199,7 +193,7 @@
 
                         </ul>
                     </div>
-                    <a href="/article" class="btn btn-common">
+                    <a href="/article/1" class="btn btn-common">
                         <i class="icon-paper-clip"></i>
                         硬核区
                     </a>
@@ -232,7 +226,9 @@
                     </div>
                     <div class="article-content">
                         <h3>
-                            <a th:href="'/article/title/'+ ${item.article_private_id}" ><p th:text="${item.article_title}"></p></a>
+                            <a th:href="'/article/title/'+ ${item.article_private_id}" >
+                                <p th:text="${item.article_title}" style="font-weight: bolder;"></p>
+                            </a>
                         </h3>
                         <p th:text="${item.article_author}"></p>
                         <p th:text="${item.article_time}"></p>
@@ -279,7 +275,6 @@
                             <i class="icon-briefcase"></i>
                             <h2 class="timelin-title">精选留言</h2>
                         </li>
-
                         <li th:each="item2:${message_weight}">
                             <div class="content-text">
                                 <h3 class="line-title" th:text="${item2.message_username}"></h3>
@@ -305,17 +300,17 @@
             <div class="col-md-6 col-lg-3 col-xs-12" th:each="item:${friendLink}">
                 <div class="friendLink-item wow fadeInDown animated" data-wow-delay="0.3s"
                      style="visibility: visible;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
-                    <div class="icon">
-                        <i class="icon-grid"></i>
-                    </div>
-                    <div class="friendLink-content">
-                        <h3>
-                            <p th:text="${item.friend_link_user}"></p>
-                        </h3>
-                        <a target="_blank" th:href="${item.friend_link_url}">
+                    <a target="_blank" th:href="${item.friend_link_url}">
+                        <div class="friendLink-pic" style="width: 80px;height: 80px;margin: auto;">
+                            <img th:src="${item.friend_link_user_head_image_url}" style="width: 100%;height: auto;border-radius: 80px;">
+                        </div>
+                        <div class="friendLink-content">
+                            <h3>
+                                <p th:text="${item.friend_link_user}" style="font-weight: bolder;color: #666;"></p>
+                            </h3>
                             <p th:text="${item.friend_link_url}"></p>
-                        </a>
-                    </div>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -333,14 +328,16 @@
             <div class="col-md-6 col-lg-3 col-xs-12" th:each="item:${entertainment}">
                 <div class="entertainment-item wow fadeInDown animated" data-wow-delay="0.3s"
                      style="visibility: visible;-webkit-animation-delay: 0.3s; -moz-animation-delay: 0.3s; animation-delay: 0.3s;">
-                    <div class="icon">
-                        <i class="icon-grid"></i>
-                    </div>
-                    <div class="entertainment-content">
-                        <a th:href="'/entertainment/' + ${item.entertainment_name}">
-                            <p th:text="${item.entertainment_name}"></p>
-                        </a>
-                    </div>
+                    <a th:href="'/entertainment/' + ${item.entertainment_name}">
+                        <div class="entertainment-pic" style="width: 80px;height: 80px;margin:auto">
+                            <img th:src="${item.entertainment_image_url}" style="width: 100%;height: 100%;border-radius: 10px;">
+                        </div>
+                        <div class="entertainment-content">
+                            <h3>
+                                <p th:text="${item.entertainment_name}" style="font-weight: bolder;font-size: medium;"></p>
+                            </h3>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -348,16 +345,17 @@
 </section>
 <!--娱乐结束-->
 <!-- 图片开始 -->
-<section id="pictures" class="section-padding">
+
+<!--<section id="pictures" class="section-padding">
     <div class="container">
         <h2 class="section-title wow flipInX animated" data-wow-delay="0.4s"
             style="visibility: visible;-webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; animation-delay: 0.4s;">
             图片
         </h2>
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12">-->
                 <!-- 图片选择按钮开始 -->
-                <div class="controls text-center">
+                <!--<div class="controls text-center">
                     <a class="filter btn btn-common active" data-filter="all">
                         所有
                     </a>
@@ -373,19 +371,16 @@
                     <a class="filter btn btn-common" data-filter=".wallpaper">
                         壁纸
                     </a>
-                </div>
+                </div>-->
                 <!-- 图片选择按钮结束-->
-            </div>
-
-
+            <!--</div>
             <div id="picture" class="row wow fadeInDown animated" data-wow-delay="0.4s"
                  style="visibility: visible;-webkit-animation-delay: 0.4s; -moz-animation-delay: 0.4s; animation-delay: 0.4s;">
-
-                <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix ${P.picturetype}" style="display: inline-block;"
+                <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix" style="display: inline-block;"
                      data-bound="">
                     <div class="picture-item">
                         <div class="shot-item">
-                            <img src="/images/picture/swiperbanner/${P.picturename}" alt="">
+                            <img src="" alt="">
                             <div class="overlay">
                                 <div class="icons">
                                     <a class="lightbox preview" href="">
@@ -402,19 +397,18 @@
             </div>
         </div>
     </div>
-</section>
+</section>-->
+
 <!-- 图片结束 -->
 <!-- 底部开始 -->
 <footer th:replace="footer.html"></footer>
 <!-- 底部结束 -->
-
 <!-- 返回最顶层 -->
 <a href="" class="back-to-top" style="display: block;">
     <i>
         <p>UP</p>
     </i>
 </a>
-
 <script type="text/javascript" th:src="@{/static/js/jquery-min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/popper.min.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/bootstrap.min.js}"></script>
@@ -427,6 +421,5 @@
 <script type="text/javascript" th:src="@{/static/js/nivo-lightbox.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/jquery.slicknav.js}"></script>
 <script type="text/javascript" th:src="@{/static/js/main.js}"></script>
-
 </body>
 </html>
