更新留言板用户名自动转换昵称，细节更新

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -65,7 +65,7 @@
                                         <ul class="timeline">
                                             <li>
                                                 <i class="icon-graduation"></i>
-                                                <h2 class="timelin-title" th:text="'欢迎用户' + ${username}"></h2>
+                                                <h2 class="timelin-title" th:text="'欢迎用户' + ${nickname}"></h2>
                                             </li>
                                             <li>
                                                 <div class="content-text"
