--- a/src/main/resources/templates/article_edit.html
+++ b/src/main/resources/templates/article_edit.html
@@ -28,7 +28,7 @@
     </div>
     <div class="btn-container">
         <button class="btn btn-info" th:value="${articlePrivateId}" onclick="editArticle(this.value)">提交</button>
-        <a class="btn btn-info" href="javascript:history.go(-1);">返回</a>
+        <a class="btn btn-info" href="javascript:window.close();">返回</a>
     </div>
 </div>
 <div class="message-box-warp">
