--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="/message/1">留言</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/friendLink/1">友人帐</a>
+                        <a class="nav-link" href="/friendLink">友人帐</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/entertainment/1">娱乐</a>
@@ -70,7 +70,7 @@
                 <a href="/message/1">留言</a>
             </li>
             <li class="">
-                <a href="/friendLink/1">友人帐</a>
+                <a href="/friendLink">友人帐</a>
             </li>
             <li class="">
                 <a href="/entertainment/1">娱乐</a>
