--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="/message/1">留言</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/friendLink/1">友人帐</a>
+                        <a class="nav-link" href="/friendLink">友人帐</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/entertainment/1">娱乐</a>
